<resources>
    <string name="Accept">Accept</string>
    <string name="Accept_friend">Accept friend</string>
    <string name="Add_friend">Add friend</string>
    <string name="All_time">All time</string>
    <string name="An_update_to_the_latest_version_is_required">An update to the latest version of the app is required</string>
    <string name="Apply_referral_code">Apply referral code</string>
    <string name="Block_user">Block user</string>
    <string name="Cancel">Cancel</string>
    <string name="Cashout">Cashout</string>
    <string name="Cashout_with_PayPal">Cashout with PayPal</string>
    <string name="Change_username">Change username</string>
    <string name="Continue">Continue</string>
    <string name="Correct_Answer">Correct Answer</string>
    <string name="Data_source">Data Source</string>
    <string name="Debug">Debug</string>
    <string name="Done">Done</string>
    <string name="Enter_a_friends_HQ_username_as_your_referral_code">"Enter a friend's HQ username as your referral code."</string>
    <string name="Extra_Life">Extra Life</string>
    <string name="Friend_Requests">Friend Requests</string>
    <string name="Friends">Friends</string>
    <string name="Games">Games</string>
    <string name="Get_More">Get More</string>
    <string name="HQ_Dev">HQ Dev</string>
    <string name="High_Score">High Score</string>
    <string name="Invalid_referral_code">Invalid referral code!</string>
    <string name="Invite">Invite</string>
    <string name="Invite_a_friend">Invite a friend</string>
    <string name="Keep_playing">Keep playing?</string>
    <string name="Leaderboard">Leaderboard</string>
    <string name="Live_trivia_game_show">"Live trivia
game show"</string>
    <string name="Log_in_or_sign_up">Log in or sign up</string>
    <string name="Modal_playground">Modal playground</string>
    <string name="Next">Next</string>
    <string name="Not_now">Not now</string>
    <string name="OK">OK</string>
    <string name="Option_B">Option B</string>
    <string name="Option_C">Option C</string>
    <string name="Please_enter_the_verification_code_sent_to">Please enter the verification code sent to %s</string>
    <string name="Referral_code">Referral code</string>
    <string name="Referral_code_optional">Referral code (optional)</string>
    <string name="Remove_friend">Remove friend</string>
    <string name="Report_issue">Report issue</string>
    <string name="Requested">Requested</string>
    <string name="Reset">Reset</string>
    <string name="Search_HQ_users">Search HQ users</string>
    <string name="Search_results_for">Search results for \"%s\"</string>
    <string name="Segment_token">Segment token</string>
    <string name="Set_custom_environment">Set custom environment</string>
    <string name="Sorry_that_didnt_work">"Sorry, that didn't work."</string>
    <string name="Stream_type">Stream type</string>
    <string name="Submit">Submit</string>
    <string name="Tell_us_about_your_experience">"Tell us about your 
 experience"</string>
    <string name="That_worked">That worked!</string>
    <string name="This_version_is_no_longer_supported">This version of the app is no longer supported. To continue, please update the app in the Play Store.</string>
    <string name="This_week">This week</string>
    <string name="Tips">Tips</string>
    <string name="Type_your_question_here">Type your question here…</string>
    <string name="Unable_to_load_image">Unable to load image</string>
    <string name="Update_in_Play_Store">Update in Play Store</string>
    <string name="Use_test_environment">Use test environment</string>
    <string name="Username">Username</string>
    <string name="Username_already_taken">Username already taken!</string>
    <string name="Username_available">Username available!</string>
    <string name="Using_Extra_Life_in">Using Extra Life in %d</string>
    <string name="Valid_referral_code">Valid referral code!</string>
    <string name="Viewer">Viewer</string>
    <string name="Wins">Wins</string>
    <string name="You_have_already_applied_a_referral_code">You have already applied a referral code. You may only do this once.</string>
    <string name="You_have_an_Extra_Life">"You have an 
 Extra Life!"</string>
    <string name="Your_detailed_feedback_helps_us">Your detailed feedback helps us make HQ Trivia better.</string>
    <string name="Your_money_will_be_there">Your money will be there in a bit</string>
    <string name="Your_phone_number">Your phone number</string>
    <string name="Your_profile">Your profile</string>
    <string name="Your_referral_code_cant_be_the_same">"Your referral code can't be the same as your username"</string>
    <string name="Your_username_must_be_at_least_3_characters">Your username must be at least 3 characters</string>
    <string name="Youre_eliminated">"You're eliminated."</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="action_finish"><b>Finish</b></string>
    <string name="action_settings">Settings</string>
    <string name="add_a_referral_code">Add A Referral Code</string>
    <string name="add_referral_code">Add Referral Code</string>
    <string name="add_referral_code_invalid_code">Please enter a valid username in the referral code box.</string>
    <string name="add_referral_code_invalid_code_all_digits">"Please enter a valid referral code. This isn't the number we sent to verify your phone earlier!"</string>
    <string name="add_referral_code_message">"Add your friend's referral code to hook them up!"</string>
    <string name="add_referral_code_title">Referral Code</string>
    <string name="app_name">HQ</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_type">application/json; charset=utf-8</string>
    <string name="authenticate_endpoint">authenticate</string>
    <string name="balance">Balance</string>
    <string name="base_url">https://api-quiz.hype.space/</string>
    <string name="base_url_test">https://api-quiztest.hype.space/</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="broadcast_full_message">This party is at capacity. Try again in a few?</string>
    <string name="bug_report_email_body">Please tell us a bit about the bug:</string>
    <string name="bug_report_email_body_thx">These details will help us fix your issue. Thanks for reporting this bug!</string>
    <string name="bug_report_email_subject" formatted="false">"%s's bug report (v%s)"</string>
    <string name="call_me">Call me</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat_new_messages_start">new messages..</string>
    <string name="chat_placeholder">Say something…</string>
    <string name="choose_from_photos">Choose from Photos</string>
    <string name="com.crashlytics.android.build_id">c6ddfd76-4649-49d5-945e-7c5a133511a9</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="faq">FAQs</string>
    <string name="get_help">Get help</string>
    <string name="get_started">Get Started</string>
    <string name="how_to_play">How to play</string>
    <string name="htp_section1_body">"We'll send a push notification.
Don't be late or you'll watch only."</string>
    <string name="htp_section1_title">First, join the live game</string>
    <string name="htp_section2_body">"Tap the answer you think is
 correct in under 10 seconds."</string>
    <string name="htp_section2_title">Answer questions, think fast</string>
    <string name="htp_section3_body">"If you tap an incorrect answer
 or you run out of time, you'll be
 eliminated from winning the prize."</string>
    <string name="htp_section3_title">"One strike and you're out"</string>
    <string name="htp_section4_body">"If more than one person makes it
 to the end, then split the prize."</string>
    <string name="htp_section4_title">Get them all right and you win</string>
    <string name="htp_section5_body">"If everyone gets eliminated, the
 prize rolls over to the next day."</string>
    <string name="htp_section5_title">No winners? No worries</string>
    <string name="htp_section6_body">"Once you have a non-zero balance you can cash
 out directly to your PayPal account."</string>
    <string name="htp_section6_title">Cash out with PayPal</string>
    <string name="htp_section7_body">Hit us up on Twitter @hqtrivia</string>
    <string name="htp_section7_title">Still have questions?</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_long"><b>Privacy Policy</b>,</string>
    <string name="rate_us">Rate us</string>
    <string name="rules">Rules</string>
    <string name="rules_long">and<b> Rules</b></string>
    <string name="submit_another">Submit another</string>
    <string name="submit_trivia">Submit trivia</string>
    <string name="terms">Terms</string>
    <string name="terms_long"><b>Terms of Use</b>,</string>
    <string name="trivia_response_paragraph">"We review all submissions but don't make any promises to include them in games. We'll let you know if we use yours."</string>
    <string name="trivia_response_title">Your question has been submitted.</string>
    <string name="trivia_tip">Think of a subject that interests you, then think of one fact or specific thing you like. Now Google it and dig into the results until you have a fascinating nugget. Finally, work it into an intriguing question, with proper grammar and spelling.</string>
    <string name="tyc1">By signing up you agree to the</string>
</resources>