<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:fitsSystemWindows="true" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/grid_3" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:textSize="16.0sp" android:textStyle="normal" android:textColor="@color/text_primary" android:gravity="top" android:id="@id/question" android:background="@drawable/edit_text_submit_trivia_question" android:paddingTop="@dimen/grid_2" android:paddingBottom="@dimen/grid_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/Type_your_question_here" android:lines="5" android:maxLength="140" android:fontFamily="@font/circularstdbook" android:paddingStart="@dimen/grid_3" android:paddingEnd="@dimen/grid_3" />
        <EditText android:id="@id/answer" android:layout_marginTop="@dimen/grid_2" android:hint="@string/Correct_Answer" style="@style/SubmitTriviaAnswerEditText" />
        <EditText android:id="@id/optionB" android:layout_marginTop="@dimen/grid_2" android:hint="@string/Option_B" style="@style/SubmitTriviaAnswerEditText" />
        <EditText android:id="@id/optionC" android:layout_marginTop="@dimen/grid_2" android:hint="@string/Option_C" style="@style/SubmitTriviaAnswerEditText" />
        <Spinner android:theme="@style/ThemeOverlay.AppCompat.Light" android:textSize="16.0sp" android:id="@id/spinner" android:background="@drawable/button_round_light_grey_border" android:layout_width="fill_parent" android:layout_height="@dimen/grid_7" android:layout_marginTop="@dimen/grid_2" android:popupBackground="@color/light_grey" android:spinnerMode="dialog" android:paddingStart="@dimen/grid_3" android:paddingEnd="@dimen/grid_3" />
        <Button android:id="@id/button2" android:layout_width="fill_parent" android:layout_marginTop="@dimen/grid_2" android:layout_marginBottom="@dimen/grid_2" android:text="@string/Submit" android:onClick="submitTriviaResults" android:backgroundTint="@color/mid_grey" style="@style/ButtonRound" />
        <TextView android:textColor="@color/text_primary" android:gravity="center" android:background="@drawable/button_round" android:paddingTop="@dimen/grid_1_half" android:paddingBottom="@dimen/grid_1_half" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Tips" android:fontFamily="@font/circularstdbold" android:paddingStart="@dimen/grid_1" android:paddingEnd="@dimen/grid_1" android:backgroundTint="@color/hq_yellow" />
        <TextView android:textColor="@color/mid_grey" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/trivia_tip" android:fontFamily="@font/circularstdbook" />
    </LinearLayout>
</ScrollView>