<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout android:theme="@style/AppTheme.AppBarOverlay" android:layout_width="fill_parent" android:layout_height="wrap_content" app:elevation="0.0dip">
        <android.support.v7.widget.Toolbar android:id="@id/toolbar" style="@style/ToolbarLight" />
    </android.support.design.widget.AppBarLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <android.support.constraint.ConstraintLayout android:gravity="center_horizontal" android:padding="@dimen/grid_3" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/sectionImg1" android:background="@drawable/illua" android:layout_width="@dimen/how_to_play_img_width" android:layout_height="wrap_content" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" />
            <TextView android:gravity="center" android:id="@id/section1_title" android:paddingLeft="@dimen/grid_3" android:paddingRight="@dimen/grid_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/htp_section1_title" android:textAlignment="center" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/sectionImg1" style="@style/Headline" />
            <TextView android:gravity="center" android:id="@id/section1_body" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/htp_section1_body" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section1_title" style="@style/BodySecondary" />
            <ImageView android:gravity="center" android:id="@id/sectionImg2" android:background="@drawable/illub" android:layout_width="@dimen/how_to_play_img_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_7" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section1_body" />
            <TextView android:gravity="center" android:id="@id/section2_title" android:paddingLeft="@dimen/grid_3" android:paddingRight="@dimen/grid_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/htp_section2_title" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/sectionImg2" style="@style/Headline" />
            <TextView android:gravity="center" android:id="@id/section2_body" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/htp_section2_body" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section2_title" style="@style/BodySecondary" />
            <ImageView android:gravity="center" android:id="@id/sectionImg3" android:background="@drawable/illuc" android:layout_width="@dimen/how_to_play_img_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_7" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section2_body" />
            <TextView android:gravity="center" android:id="@id/section3_title" android:paddingLeft="@dimen/grid_3" android:paddingRight="@dimen/grid_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/htp_section3_title" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/sectionImg3" style="@style/Headline" />
            <TextView android:gravity="center" android:id="@id/section3_body" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/htp_section3_body" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section3_title" style="@style/BodySecondary" />
            <ImageView android:gravity="center" android:id="@id/sectionImg4" android:background="@drawable/illud" android:layout_width="@dimen/how_to_play_img_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_7" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section3_body" />
            <TextView android:gravity="center" android:id="@id/section4_title" android:paddingLeft="@dimen/grid_3" android:paddingRight="@dimen/grid_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/htp_section4_title" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/sectionImg4" style="@style/Headline" />
            <TextView android:gravity="center" android:id="@id/section4_body" android:paddingLeft="@dimen/grid_3" android:paddingRight="@dimen/grid_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/htp_section4_body" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section4_title" style="@style/BodySecondary" />
            <ImageView android:gravity="center" android:id="@id/sectionImg5" android:background="@drawable/illue" android:layout_width="@dimen/how_to_play_img_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_7" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section4_body" />
            <TextView android:gravity="center" android:id="@id/section5_title" android:paddingLeft="@dimen/grid_3" android:paddingRight="@dimen/grid_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/htp_section5_title" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/sectionImg5" style="@style/Headline" />
            <TextView android:gravity="center" android:id="@id/section5_body" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/htp_section5_body" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section5_title" style="@style/BodySecondary" />
            <ImageView android:gravity="center" android:id="@id/sectionImg6" android:background="@drawable/illug" android:layout_width="@dimen/how_to_play_img_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_7" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section5_body" />
            <TextView android:gravity="center" android:id="@id/section6_title" android:paddingLeft="@dimen/grid_3" android:paddingRight="@dimen/grid_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/htp_section6_title" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/sectionImg6" style="@style/Headline" />
            <TextView android:gravity="center" android:id="@id/section6_body" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/htp_section6_body" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section6_title" style="@style/BodySecondary" />
            <ImageView android:gravity="center" android:id="@id/sectionImg7" android:background="@drawable/illuh" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_7" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section6_body" />
            <TextView android:gravity="center" android:id="@id/section7_title" android:paddingLeft="@dimen/grid_3" android:paddingRight="@dimen/grid_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid_1" android:text="@string/htp_section7_title" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/sectionImg7" style="@style/Headline" />
            <TextView android:gravity="center" android:id="@id/section7_body" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/htp_section7_body" android:onClick="submitTwitter" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/section7_title" style="@style/BodySecondary" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>