<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:id="@id/container" android:background="@color/hq_blue" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/bg_pattern_image_view" android:focusable="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="centerCrop" android:adjustViewBounds="false" android:cropToPadding="false" app:srcCompat="@drawable/bg_pattern" />
    <ImageView android:id="@id/bg_objects_image_view" android:focusable="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="centerCrop" android:adjustViewBounds="false" android:cropToPadding="false" app:srcCompat="@drawable/bg_objects" />
    <ImageView android:id="@id/logo" android:background="@drawable/logo" android:layout_width="@dimen/grid_30" android:layout_height="133.0dip" app:layout_constraintBottom_toTopOf="@id/get_started_button_container" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="24.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/live_trivia" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/Live_trivia_game_show" android:fontFamily="@font/circularstdmedium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/logo" />
    <FrameLayout android:id="@id/get_started_button_container" android:paddingBottom="@dimen/grid_2" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@id/footer_container" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
        <Button android:id="@id/btn_get_started" android:layout_width="fill_parent" android:text="@string/get_started" android:layout_marginStart="@dimen/grid_4" android:layout_marginEnd="@dimen/grid_4" android:backgroundTint="@color/hq_red" style="@style/ButtonRound" />
        <ProgressBar android:layout_gravity="center" android:id="@id/progress_bar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" style="?android:progressBarStyleLarge" />
    </FrameLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/footer_container" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent">
        <TextView android:textSize="12.0sp" android:textColor="@color/text_light_purple" android:gravity="center" android:id="@id/tyc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tyc1" android:alpha="0.6" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingBottom="@dimen/grid_3" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="12.0sp" android:textColor="@color/text_light_purple" android:id="@id/terms" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/terms_long" android:onClick="terms" android:paddingEnd="@dimen/letter_spacing" />
            <TextView android:textSize="12.0sp" android:textColor="@color/text_light_purple" android:id="@id/privacy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/privacy_long" android:onClick="privacy" android:paddingEnd="@dimen/letter_spacing" />
            <TextView android:textSize="12.0sp" android:textColor="@color/text_light_purple" android:id="@id/rules" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rules_long" android:onClick="rules" />
        </LinearLayout>
    </LinearLayout>
    <TextView android:textColor="@color/white" android:id="@id/debug_env_text_view" android:padding="16.0dip" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="debugEnvClicked" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>